# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.8.19 (09 Apr 2002)

  08 Apr 2002; Geert Bevin <gbevin@gentoo.org>: emerge:
  Removed --all switch to emerge unmerge and clea.
  Added emerge prune which is the same as old emerge unmerge.
  Emerge unmerge removes all instances again without any proctedtion, as
  before.
  Added reporting of Omitted versions due to dep selectors.
  Renamed Removing and Keeping to Selected and Protected

  08 Apr 2002; Geert Bevin <gbevin@gentoo.org>: emerge, portage.py:
  Better unmerge and clean reporting.
  Added homepage output to emerge --search.
  Bugfix when specifying a package without category that doesn't exist.

*portage-1.8.18 (07 Apr 2002)

  07 Apr 2002; Geert Bevin <gbevin@gentoo.org>: make.globals, emerge:
  Simplified unmerge functionality. Deprecated the CLEANMODE var,
  emerge clean now removes both revisions and slots automatically,
  emerge unmerge now removes all versions and revisions by default.
  Both understand world and system targets, and the --all option which doesn't
  check which packages are old and outdated.
  Documentation fixes.
  AUTOCLEAN var addition and added the autoclean functionality.
  
*portage-1.8.17 (05 Apr 2002)

  05 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: no longer
  print out the counter number after a merge.  This information should not
  need to be known by end-users.
  
  05 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: sandbox.c: patched to
  allow access to /dev/vc from sandbox, allowing vim and screen to compile
  correctly from console.
  
  05 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: fixed a bug
  that prevented md5 digests from being compared on archives.
  
  04 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: Parse errors
  in /etc/env.d files no longer cause a traceback.

*portage-1.8.16 (04 Apr 2002)
